--- a/render.yaml
+++ b/render.yaml
@@ -4,9 +4,13 @@ services:
     name: telegram-bot
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: python bot.py
+    startCommand: python healthcheck.py && python bot.py
     envVars:
       - key: TELEGRAM_BOT_TOKEN
         sync: false
       - key: PORT
         value: 8080
+    autoDeploy: false
+    numInstances: 1
+    healthCheckPath: /
+    healthCheckTimeout: 5
