--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,4 @@
 
-services:
-  - type: web
-    name: telegram-bot
-    env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: pkill -f "python bot.py" || true && python healthcheck.py && python bot.py
-    envVars:
-      - key: TELEGRAM_BOT_TOKEN
-        sync: false
-      - key: PORT
-        value: 8080
-    autoDeploy: false
-    numInstances: 1
-    healthCheckPath: /
-    healthCheckTimeout: 5
+aiogram
+python-dotenv
+requests
