--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.11"
 dependencies = [
-    "aiogram>=3.18.0",
-    "python-dotenv>=1.0.1",
-    "twilio>=9.4.6",
+    "aiogram>=3.21.0",
+    "aiosqlite>=0.21.0",
+    "python-dotenv>=1.1.1",
 ]
